deployments/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
      - name: user
        image: andyovch/sa-user:0.0.2
        ports:
        - name: web
          containerPort: 8000
        livenessProbe:
          httpGet:
            port: web
            path: /health
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            port: web
            path: /ready
          initialDelaySeconds: 5
          periodSeconds: 5
