deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-app
  ports:
  - port: 8081
    targetPort: 8080
    protocol: TCP
  type: NodePort
