deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  annotations:
    kubernetes.io/ingress-class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/andrey(?:$|\/)(.*)
        pathType: "Exact"
        backend:
          service:
            name: user-service
            port:
              number: 8081
